packages/next-swc/crates/core/tests/errors/next-font-loaders/font-modules/options-object/output.js
import a from '@next/font/google?{"font":"ABeeZee"}'
import a from '@next/font/google?{"font":"ABeeZee"}'
import a from '@next/font/google?{"font":"ABeeZee"}'
import a from '@next/font/google?{"font":"ABeeZee"}'
import a from '@next/font/google?{"font":"ABeeZee"}'
import a from '@next/font/google?{"font":"ABeeZee"}'
import a from '@next/font/google?{"font":"ABeeZee"}'
const a = fn({
  10: 'hello',
})
const a = fn({
  variant: [...[], 'hello'],
})
const a = fn({
  variant: [i1],
})
const a = fn({
  variant: [, ''],
})
const a = fn({
  variant: () => {},
})
const a = fn({
  variant() {},
})
const a = fn({
  ...{},
})
